--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@rainbow-me/rainbowkit": "^0.2.1",
+    "ethers": "^5.6.8",
+    "framer-motion": "^6.3.5",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "wagmi": "^0.4.4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.36",
     "@types/react": "18.0.9",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
